[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docflow"
version = "0.1.0"
description = "DocFlow: domain-agnostic PDF-to-structured-text extractor with Docling, PyMuPDF and Agentic-Doc backends."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{ name = "Ali Tahir", email = "" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/salitahir/doc_flow"  # update when split to its own repo

[tool.setuptools.packages.find]
where = ["."]
include = ["docflow*"]
